--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-handlebars": "latest",
-    "js-yaml": "latest",
     "lodash": "latest",
     "morgan": "~1.6.1",
     "nib": "latest",
-    "pg": "^4.4.3"
+    "pg": "^4.4.3",
+    "ejs":"latest"
   },
   "devDependencies": {
-    "bower": "latest",
     "grunt": "latest"
   }
 }
