--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "latest",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "lodash": "latest",
     "morgan": "~1.6.1",
     "nib": "latest",
-    "pg": "^4.4.3",
-    "ejs":"latest"
+    "pg": "^4.4.3"
   },
   "devDependencies": {
     "grunt": "latest"
