INCOMPLETE PAGES: Project ViewTags
Began working on these but did not finish.
Cleaned up code on the "create" group of pages.

Added the sendgrid dependency, be sure to npm install next time you run the project.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "latest",
     "morgan": "~1.6.1",
     "nib": "latest",
-    "pg": "^4.4.3"
+    "pg": "^4.4.3",
+    "sendgrid": "^1.9.2"
   },
   "devDependencies": {
     "grunt": "latest"
