--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ejs": "latest",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
-    "lodash": "^3.0.0.",
+    "lodash": "^3.0.0",
     "morgan": "~1.6.1",
     "nib": "latest",
     "pg": "^4.4.3",
